--- a/src/Desymfony/DesymfonyBundle/Resources/config/routing.yml
+++ b/src/Desymfony/DesymfonyBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 portada:
     pattern:  /
     defaults: { _controller: DesymfonyBundle:Default:index }
+
+ponentes:
+    pattern: /ponentes
+    defaults: { _controller: DesymfonyBundle:Ponente:index }
